# digital-signage

./: .dockerignore  .gitignore  Dockerfile  README.md  nixpacks.toml  package-lock.json  package.json
apps/cms/: .env.example  index.html  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
apps/cms/src/: App.tsx  api.ts  deviceCenter.test.ts  deviceCenter.ts  styles.css  (+3 more)
apps/player/: .env.example  capacitor.config.ts  index.html  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
apps/rpi-player/: pyproject.toml
apps/rpi-player/src/: signaldeck_agent.py  signaldeck_hotkeys.py  signaldeck_service_console.py  signaldeck_webui.py
apps/rpi-player/src/signaldeck_rpi/: __init__.py  __main__.py  agent.py  cache.py  cms.py  commands.py  config.py  hotkeys.py  identity.py  playback.py  proof.py  service_console.py  sync.py  webui.py
apps/rpi-player/systemd/: signaldeck-agent.service  signaldeck-hotkeys.service  signaldeck-service-console.service  signaldeck-setup-mode.service  signaldeck-webui.service
apps/rpi-player/tests/: test_agent.py  test_cache.py  test_cms.py  test_commands.py  test_config.py  test_hotkeys.py  test_identity.py  test_playback.py  test_proof.py  test_service_console.py  test_sync.py  test_webui.py
apps/server/: .env.example  package.json  server.js  tsconfig.json
docs/: deployment.md  pocketbase-model.md  raspberry-pi-video-premium-handoff.md
docs/roadmap/: signal-deck-platform-handoff.md
scripts/: publish-apk.mjs  setup-pocketbase.mjs
scripts/rpi/: install-video-premium.sh
(+30 files in other folders)
